--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,22 @@ body {
   padding-bottom: 10px;
   padding-top: 10px;
 }
+
+@media (min-width: 600px) {
+  .container {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  .wiki-content {
+    display: flex;
+    flex-flow: row-reverse;
+  }
+  .img-container {
+    min-width: 50%;
+    max-width: 50%;
+  }
+  .wiki-text {
+    min-width: 50%;
+    max-width: 50%;
+  }
+}
